[gd_scene load_steps=4 format=3 uid="uid://braak0j3okmi3"]

[ext_resource type="Theme" uid="uid://smqfvs5ksuj5" path="res://assets/main/player.tres" id="1_llnge"]
[ext_resource type="Script" path="res://Menu.gd" id="2_ma6js"]
[ext_resource type="FontFile" uid="uid://de6gg0xvy3mxi" path="res://assets/fonts/static/PixelifySans-Bold.ttf" id="3_req77"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_llnge")
script = ExtResource("2_ma6js")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -144.0
offset_right = 184.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -100.0
offset_right = 170.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Separator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -90.0
offset_right = 345.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_req77")
theme_override_font_sizes/font_size = 150
text = "LABIRYNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GRAJ"

[node name="LoadButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "WCZYTAJ GRĘ"

[node name="OptionButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "OPCJE"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "WYJDŹ"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
